<resources>
    <string name="app_name">ShortBarge</string>
    <string name="license_number_driver">Driver\'s license NO.:</string>
    <string name="emergency_contact">Emergency Contact:</string>
    <string name="phone_number">Phone NO.:</string>
    <string name="current_task">Current Task</string>
    <string name="scheduled_tasks">Assignment Tasks</string>
    <string name="arrival_time">Arrived Time:</string>
    <string name="waiting_time">Waiting Time:</string>
    <string name="minutes">Minutes</string>
    <string name="next_station">Next Stop:</string>
    <string name="workshop">Dock</string>
    <string name="voice_message">Voice Message</string>
    <string name="arrive">Arrived</string>
    <string name="more_tasks">More Tasks</string>
    <string name="number_of_tasks">Number of tasks:</string>
    <string name="emergency">Emergency</string>
    <string name="start_time">Start Time:</string>
    <string name="destination">Destination:</string>
    <string name="task_status">Task Status:</string>
    <string name="to_be_implemented">To Do</string>
    <string name="delayed">Delayed</string>
    <string name="in_transit">In transit</string>
    <string name="waiting">Waiting</string>
    <string name="welcome_login">Welcome Login</string>
    <string name="plz_username">Please enter a username</string>
    <string name="plz_pwd">Please enter a password</string>
    <string name="rem_pwd">Remember</string>
    <string name="forget_pwd">Forget</string>
    <string name="login">Login</string>
    <string name="forget_pwd2">Forget</string>
    <string name="administrator_name">Administrator Name：</string>
    <string name="administrator_phone">Administrator Phone：</string>
    <string name="hint_forgot_pwd">The user name and password are managed by the administrator, please contact the administrator to change the password</string>
    <string name="server_configuration">Server configuration</string>
    <string name="confirm">Confirm</string>
    <string name="driver">Driver</string>
    <string name="server_port">Server Port</string>
    <string name="server_address">Server Address</string>
    <string name="cancel">Cancel</string>
    <string name="fail_connect">The server connection failed, contact your administrator.</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="driver_name">Name:</string>
    <string name="language">Language</string>
    <string name="car_name">Truck Name:</string>
    <string name="gps_link_status">GPS Link Status:</string>
    <string name="server_link_status">Server Link Status:</string>
    <string name="log_out">Log out</string>
    <string name="press_speak">Press and hold to speak</string>
    <string name="connecting">Please wait while connecting to the server~</string>
    <string name="license_number_truck">License Plate:</string>
    <string name="state_connected">Connected</string>
    <string name="state_lost">Lost</string>
    <string name="state_reconnecting">Reconnecting</string>
    <string name="task_start">Start</string>
    <string name="task_continue">Continue</string>
    <string name="task_finish">Finished</string>
    <string name="task_arrive">Arrived</string>
    <string name="hint_serverc_config">Please check that the input is complete</string>
    <string name="hint_check_load">Please check that you have arrived at destination for loading/unloading</string>
    <string name="car_no">Truck\'s NO.:</string>
    <string name="account">Account:</string>
    <string name="edit">Edit</string>
    <string name="lang_switch">Switch</string>
    <string name="account_relogin">The account is logged in</string>
</resources>