<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context=".view.LoginActivity">

    <ImageView
        android:layout_width="126dp"
        android:layout_height="47.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@mipmap/group" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="17dp"
        android:text="ENGINEERING"
        android:textColor="@color/deepsoft_text_red"
        android:textSize="12sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/archivo_bold"
        android:letterSpacing="0.1"
        android:text="TOMORROW"
        android:textColor="@color/deepsoft_text_red"
        android:textSize="12sp" />


    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="273dp"
        android:background="@drawable/round_rectangle_white_opc"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:textSize="20sp"
            android:textColor="@color/deepsoft_config_color_pure_black"
            android:includeFontPadding="false"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"/>
        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:includeFontPadding="false"
            android:hint="@string/plz_username"
            android:maxLines="1"
            android:textColorHint="@color/deepsoft_text_hint_gray"
            android:textSize="11sp"
            android:textColor="@color/deepsoft_text_black"
            android:background="@drawable/line_round_white_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp"
            android:paddingLeft="11dp"/>
        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:includeFontPadding="false"
            android:layout_below="@id/login_et_username"
            android:layout_alignLeft="@id/login_et_username"
            android:inputType="textPassword"
            android:hint="@string/plz_pwd"
            android:maxLines="1"
            android:textColorHint="@color/deepsoft_text_hint_gray"
            android:textSize="11sp"
            android:textColor="@color/deepsoft_text_black"
            android:background="@drawable/line_round_white_bg"
            android:layout_marginTop="17dp"
            android:paddingLeft="11dp"/>
        <CheckBox
            android:id="@+id/login_cb_rem_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_pwd"
            android:textColor="@color/deepsoft_text_pwd_gray"
            android:textSize="11sp"
            android:layout_alignLeft="@id/login_et_username"
            android:layout_below="@id/login_et_pwd"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="-5dp"
            android:includeFontPadding="false"
            android:buttonTint="@color/deepsoft_text_red"/>
        <TextView
            android:id="@+id/login_tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:textColor="@color/deepsoft_text_pwd_gray"
            android:textSize="11sp"
            android:layout_alignTop="@id/login_cb_rem_pwd"
            android:layout_alignRight="@id/login_et_username"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/login_tv_login"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"
            android:background="@drawable/round_rectangle_red"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/deepsoft_config_color_white" />
    </RelativeLayout>

</RelativeLayout>