<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff">
    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="320dp"
        android:background="@drawable/round_rectangle_white">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="20dp"
            android:src="@mipmap/usericon_setting"/>

        <TextView
            android:id="@+id/dialog_set_tv_dn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="23dp"
            android:includeFontPadding="false"
            android:text="LiXiaoming"
            android:textColor="@color/deepsoft_text_black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/dialog_set_tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_alignLeft="@id/dialog_set_tv_dn"
            android:layout_below="@id/dialog_set_tv_dn"
            android:includeFontPadding="false"
            android:text="zhangsan"
            android:textColor="@color/deepsoft_text_black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/dialog_set_tv_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_alignLeft="@id/dialog_set_tv_dn"
            android:layout_below="@id/dialog_set_tv_account"
            android:includeFontPadding="false"
            android:text="05"
            android:textColor="@color/deepsoft_text_black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/dialog_set_tv_ln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_alignLeft="@id/dialog_set_tv_dn"
            android:layout_below="@id/dialog_set_tv_car"
            android:includeFontPadding="false"
            android:text="Z1123"
            android:textColor="@color/deepsoft_text_black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/dialog_set_tv_dn_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_alignTop="@id/dialog_set_tv_dn"
            android:includeFontPadding="false"
            android:text="@string/driver_name"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/dialog_set_tv_account"
            android:layout_alignLeft="@id/dialog_set_tv_dn_label"
            android:includeFontPadding="false"
            android:text="@string/account"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/dialog_set_tv_dn_label"
            android:layout_alignTop="@id/dialog_set_tv_car"
            android:includeFontPadding="false"
            android:text="@string/car_no"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/dialog_set_tv_dn_label"
            android:layout_alignTop="@id/dialog_set_tv_ln"
            android:includeFontPadding="false"
            android:gravity="center_vertical"
            android:text="@string/license_number_truck"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="14sp" />


        <View
            android:layout_width="457dp"
            android:layout_height="97dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="23dp"
            android:background="@drawable/round_line_rect_red"/>


        <TextView
            android:id="@+id/dialog_set_tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="217dp"
            android:layout_marginTop="168dp"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="中文"
            android:textColor="@color/deepsoft_text_black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/dialog_set_tv_server"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:layout_alignLeft="@id/dialog_set_tv_lang"
            android:layout_below="@id/dialog_set_tv_lang"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="Connected"
            android:textColor="@color/deepsoft_text_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dialog_set_tv_lang_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignTop="@id/dialog_set_tv_lang"
            android:layout_marginLeft="48dp"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignLeft="@id/dialog_set_tv_lang_label"
            android:layout_alignTop="@id/dialog_set_tv_server"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/server_link_status"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dialog_set_tv_switch"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginLeft="360dp"
            android:layout_alignTop="@id/dialog_set_tv_lang"
            android:background="@drawable/round_rectangle_red"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/lang_switch"
            android:textColor="@color/deepsoft_config_color_white"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/dialog_set_tv_edit"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignLeft="@id/dialog_set_tv_switch"
            android:layout_alignTop="@id/dialog_set_tv_server"
            android:background="@drawable/round_rectangle_red"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/edit"
            android:textColor="@color/deepsoft_config_color_white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/dialog_set_tv_logout"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/log_out"
            android:textSize="15sp"
            android:textColor="@color/deepsoft_config_color_white"
            android:background="@drawable/round_rectangle_red"/>

        <TextView
            android:id="@+id/dialog_set_tv_cancel"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_toLeftOf="@id/dialog_set_tv_logout"
            android:background="@drawable/round_rectangle_red"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/cancel"
            android:textColor="@color/deepsoft_config_color_white"
            android:textSize="15sp" />

    </RelativeLayout>
</RelativeLayout>