<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context=".view.ServerConfigActivity">

    <ImageView
        android:layout_width="126dp"
        android:layout_height="47.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@mipmap/group" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="17dp"
        android:text="ENGINEERING"
        android:textColor="@color/deepsoft_text_red"
        android:textSize="12sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/archivo_bold"
        android:letterSpacing="0.1"
        android:text="TOMORROW"
        android:textColor="@color/deepsoft_text_red"
        android:textSize="12sp" />


    <RelativeLayout
        android:layout_width="450dp"
        android:layout_height="245dp"
        android:background="@drawable/round_rectangle_white_opc"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_configuration"
            android:textSize="20sp"
            android:textColor="@color/deepsoft_config_color_pure_black"
            android:includeFontPadding="false"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="46dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_address"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="12sp"
            android:layout_marginTop="86dp"
            android:layout_marginLeft="46dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_port"
            android:textColor="@color/deepsoft_text_gray"
            android:textSize="12sp"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="46dp"/>

        <EditText
            android:id="@+id/sercon_et_add"
            android:layout_width="211dp"
            android:layout_height="35dp"
            android:includeFontPadding="false"
            android:hint="xxx xxx xxx"
            android:maxLines="1"
            android:textColorHint="@color/deepsoft_text_hint_gray"
            android:textSize="11sp"
            android:textColor="@color/deepsoft_text_black"
            android:background="@drawable/line_round_white_bg"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="78dp"
            android:paddingLeft="11dp"/>
        <EditText
            android:id="@+id/sercon_et_port"
            android:layout_width="211dp"
            android:layout_height="35dp"
            android:includeFontPadding="false"
            android:layout_below="@id/sercon_et_add"
            android:layout_alignLeft="@id/sercon_et_add"
            android:inputType="textPassword"
            android:hint="8085"
            android:maxLines="1"
            android:textColorHint="@color/deepsoft_text_hint_gray"
            android:textSize="11sp"
            android:textColor="@color/deepsoft_text_black"
            android:background="@drawable/line_round_white_bg"
            android:layout_marginTop="17dp"
            android:paddingLeft="11dp"/>

        <TextView
            android:id="@+id/sercon_tv_cancel"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="23dp"
            android:layout_marginLeft="108dp"
            android:background="@drawable/round_rectangle_red"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:textColor="@color/deepsoft_config_color_white" />
        <TextView
            android:id="@+id/sercon_tv_confirm"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="23dp"
            android:layout_marginRight="108dp"
            android:background="@drawable/round_rectangle_red"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="12sp"
            android:textColor="@color/deepsoft_config_color_white" />
    </RelativeLayout>

</RelativeLayout>